[gd_scene load_steps=31 format=3 uid="uid://dws2mhcfu18v7"]

[ext_resource type="Script" path="res://Scripts/Managers/battle_manager.gd" id="1_q4kp8"]
[ext_resource type="Script" path="res://Scripts/Managers/spell_manager.gd" id="2_fijju"]
[ext_resource type="Script" path="res://Scripts/playspace.gd" id="3_x32qe"]
[ext_resource type="Theme" uid="uid://dpn2t23n7kt45" path="res://Scenes/UI/default-theme.theme" id="4_p0ay2"]
[ext_resource type="Script" path="res://Scripts/UI Elements/pass_button.gd" id="5_hc2at"]
[ext_resource type="PackedScene" uid="uid://brqd7qlj1sonb" path="res://Scenes/Cards/card_slot.tscn" id="5_jwt0r"]
[ext_resource type="Texture2D" uid="uid://ba411usipidba" path="res://Assets/Characters/Knight/_Idle.png" id="6_h1mt6"]
[ext_resource type="Script" path="res://Scripts/Managers/card_manager.gd" id="8_igyel"]
[ext_resource type="PackedScene" uid="uid://vlo6uno0t1dc" path="res://Scenes/Cards/player_hand.tscn" id="9_c2gkm"]
[ext_resource type="Script" path="res://Scripts/Cards/card_database.gd" id="10_axl6h"]
[ext_resource type="Script" path="res://input_manager.gd" id="11_3dc1d"]
[ext_resource type="PackedScene" uid="uid://crv6rsiuh0gi1" path="res://Scenes/Playspace/opponent_manager.tscn" id="12_is4qh"]
[ext_resource type="PackedScene" uid="uid://bcsfohtmxascv" path="res://Scenes/Playspace/game_time.tscn" id="13_nv2l5"]

[sub_resource type="Gradient" id="Gradient_dttap"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_di84m"]
gradient = SubResource("Gradient_dttap")
width = 4
height = 4

[sub_resource type="AtlasTexture" id="AtlasTexture_64vpn"]
atlas = ExtResource("6_h1mt6")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6ace"]
atlas = ExtResource("6_h1mt6")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tabat"]
atlas = ExtResource("6_h1mt6")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5ux6"]
atlas = ExtResource("6_h1mt6")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_087gk"]
atlas = ExtResource("6_h1mt6")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwj3r"]
atlas = ExtResource("6_h1mt6")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw6jv"]
atlas = ExtResource("6_h1mt6")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_24poh"]
atlas = ExtResource("6_h1mt6")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4drr"]
atlas = ExtResource("6_h1mt6")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m20e"]
atlas = ExtResource("6_h1mt6")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_5q441"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64vpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6ace")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tabat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5ux6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_087gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwj3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw6jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24poh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4drr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m20e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_s2b4b"]
offsets = PackedFloat32Array(0, 0.72238, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.946176, 0.946176, 0.946176, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_is8as"]
gradient = SubResource("Gradient_s2b4b")
fill = 1
fill_from = Vector2(0.508547, 0.504274)
fill_to = Vector2(0.893162, 0.162393)

[sub_resource type="Gradient" id="Gradient_cp2la"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ab8nc"]
gradient = SubResource("Gradient_cp2la")
width = 1920
height = 1920
fill_from = Vector2(0, 1)

[node name="BattleManager" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_q4kp8")

[node name="BattleTimer" type="Timer" parent="."]

[node name="SpellManager" type="Node2D" parent="."]
script = ExtResource("2_fijju")

[node name="Playspace" type="Node2D" parent="."]
script = ExtResource("3_x32qe")

[node name="Centerpoint" type="Sprite2D" parent="Playspace"]
visible = false
z_index = 15
scale = Vector2(2, 2)
texture = SubResource("GradientTexture2D_di84m")

[node name="PassButton" type="Button" parent="Playspace"]
offset_left = 519.0
offset_top = 209.0
offset_right = 579.0
offset_bottom = 239.0
theme = ExtResource("4_p0ay2")
theme_override_font_sizes/font_size = 16
action_mode = 0
text = "Pass
"
script = ExtResource("5_hc2at")

[node name="PlayerSlot" parent="Playspace" instance=ExtResource("5_jwt0r")]
z_as_relative = false
position = Vector2(320, 337)

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Playspace/PlayerSlot"]
visible = false
z_as_relative = false
position = Vector2(19, -83)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_5q441")
autoplay = "default"
frame_progress = 0.333758

[node name="OpponentSlot" parent="Playspace" instance=ExtResource("5_jwt0r")]
z_index = 5
z_as_relative = false
position = Vector2(320, 26)

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("8_igyel")

[node name="PlayerHand" parent="CardManager" instance=ExtResource("9_c2gkm")]
z_index = 3
position = Vector2(1014, 1151)

[node name="OpponentHand" parent="CardManager" instance=ExtResource("9_c2gkm")]
position = Vector2(978, 43)

[node name="CardDatabase" type="Node2D" parent="CardManager"]
script = ExtResource("10_axl6h")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("11_3dc1d")

[node name="OpponentManager" parent="." instance=ExtResource("12_is4qh")]

[node name="OpponentTimer" type="Timer" parent="OpponentManager"]

[node name="GameTime" parent="." instance=ExtResource("13_nv2l5")]
visible = false
position = Vector2(557, 169)
scale = Vector2(5, 5)

[node name="Lighting" type="Node2D" parent="."]

[node name="PlayerLight" type="PointLight2D" parent="Lighting"]
light_mask = 3
position = Vector2(324, 416)
scale = Vector2(7.05469, 7.03906)
color = Color(1, 0.988235, 0.917647, 0.647059)
texture = SubResource("GradientTexture2D_is8as")

[node name="EnemyLight" type="PointLight2D" parent="Lighting"]
position = Vector2(321, 49)
scale = Vector2(4.03125, 4.03906)
color = Color(1, 0.988235, 0.917647, 0.796078)
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_is8as")

[node name="Ambient" type="PointLight2D" parent="Lighting"]
position = Vector2(329, 501)
scale = Vector2(1.66979, 1.21615)
color = Color(1, 1, 1, 0.521569)
blend_mode = 1
range_layer_max = 2
range_item_cull_mask = 769
texture = SubResource("GradientTexture2D_ab8nc")
height = 100.0

[node name="CardAmbient" type="PointLight2D" parent="Lighting"]
position = Vector2(329, 501)
scale = Vector2(1.66979, 1.21615)
color = Color(1, 1, 1, 0.403922)
blend_mode = 1
range_layer_max = 2
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_ab8nc")
height = 400.0

[connection signal="pressed" from="Playspace/PassButton" to="." method="_on_pass_button_pressed"]
